<resources>
    <string name="app_name">নামাজ শিক্ষা</string>
    <string name="update">Cheek Update</string>
    <string name="share">share this apps</string>
    <string name="feedback">Feedback</string>
    <string name="setting">Setting</string>
    <string name="privcy_policy">Privacy Policy </string>
    <string name="other_aps">Other Apps</string>
    <string name="rate_us">Rate Us</string>
    <string name="jont_text">

        Assalamualaikum.\n\nMy Name is Md.Samiul Alim Jony.My Hometown is chapai-Nawabganj,Rajshahi,Bagnladesh.
        \n\nThis app any objection so you can inform myself. Go Menu option Then click Feedback Option then type your name
        and Message Then Click sent Button.

        Thanks for using this Apps.\n\n

        Allah Hafiz..\n\n

        ℙ𝕠𝕨𝕖𝕣 𝔹𝕪 𝕭𝛼𝖇𝖚𝖑𝖌𝛼𝖒

    </string>
    <string name="namajrules">নামাজের নিয়ম</string>
    <string name="namajtimes">নামাজের উপযুক্ত সময়</string>
    <string name="ozurules">অযুর নিয়ম</string>
    <string name="nameofallah">আল্লাহর ৯৯ টি নাম</string>
    <string name="kalimasomuho">পাঁচ কালেমা সমূহ</string>
    <string name="othersnamaj">অন্যান্য নামাজ </string>
    <string name="fbidlink"> https://www.facebook.com/sa.jony.9191/</string>
    <string name="mobile_number"> 01794755094</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="allah_Arbi_name">

        <item>ٱلْرَّحْمَـانُ     </item>
        <item>ٱلْرَّحِيْمُ</item>
        <item>ٱلْمَلِكُ</item>
        <item>ٱلْقُدُّوسُ</item>
        <item>ٱلْسَّلَامُ</item>
        <item>ٱلْمُؤْمِنُ</item>
        <item>ٱلْمُهَيْمِنُ</item>
        <item>ٱلْعَزِيزُ</item>
        <item>الحفیظ</item>
        <item>ٱلْمُتَكَبِّرُ</item>
        <item>ٱلْخَالِقُ</item>
        <item>ٱلْبَارِئُ</item>
        <item>ٱلْمُصَوِّرُ</item>
        <item>ٱلْغَفَّارُ</item>
        <item>ٱلْقَهَّارُ</item>
        <item>لْوَهَّابُ</item>
        <item>لْرَّزَّاقُ</item>
        <item>ٱلْفَتَّاحُ</item>
        <item>ٱلْعَلِيمُ</item>
        <item>ٱلْقَابِضُ</item>
        <item>ٱلْبَاسِطُ</item>
        <item>ٱلْخَافِضُ</item>
        <item>ٱلْرَّافِعُ</item>
        <item>ٱلْمُعِزُّ</item>
        <item>ٱلْمُذِلُّ</item>
        <item>ٱلْسَّمِيعُ</item>
        <item>ٱلْبَصِيرُ</item>
        <item>ٱلْحَكَمُ</item>
        <item>ٱلْعَدْلُ</item>
        <item>ٱلْلَّطِيفُ</item>
        <item>ٱلْخَبِيرُ</item>
        <item>ٱلْحَلِيمُ</item>
        <item>ٱلْعَظِيمُ</item>
        <item>ٱلْغَفُورُ</item>
        <item>ٱلْشَّكُورُ</item>
        <item>ٱلْعَلِيُّ</item>
        <item>ٱلْكَبِيرُ</item>
        <item>ٱلْحَفِيظُ</item>
        <item>ٱلْمُقِيتُ</item>
        <item>ٱلْحَسِيبُ</item>
        <item>ٱلْجَلِيلُ</item>
        <item>ٱلْكَرِيمُ</item>
        <item>ٱلْرَّقِيبُ</item>
        <item>ٱلْمُجِيبُ</item>
        <item>ٱلْوَاسِعُ</item>
        <item>ٱلْحَكِيمُ</item>
        <item>ٱلْوَدُودُ</item>
        <item>ٱلْمَجِيدُ</item>
        <item>ٱلْبَاعِثُ</item>
        <item>ٱلْشَّهِيدُ</item>
        <item>ٱلْحَقُّ</item>
        <item>ٱلْوَكِيلُ</item>
        <item>ٱلْقَوِيُّ</item>
        <item> ٱلْمَتِينُ</item>
        <item>ٱلْوَلِيُّ</item>
        <item>ٱلْحَمِيدُ</item>
        <item>ٱلْمُحْصِيُ</item>
        <item>ٱلْمُبْدِئُ</item>
        <item>ٱلْمُعِيدُ</item>
        <item>ٱلْمُحْيِى</item>
        <item>ٱلْمُمِيتُ</item>
        <item>ٱلْحَىُّ</item>
        <item>ٱلْقَيُّومُ</item>
        <item>ٱلْوَاجِدُ</item>
        <item>ٱلْمَاجِدُ</item>
        <item>ٱلْوَاحِدُ</item>
        <item>ٱلْأَحَد</item>
        <item>ٱلْصَّمَدُ</item>
        <item>ٱلْقَادِرُ</item>
        <item>ٱلْمُقْتَدِرُ</item>
        <item>ٱلْمُقَدِّمُ</item>
        <item>ٱلْمُؤَخِّرُ</item>
        <item>ٱلأَوَّلُ</item>
        <item> ٱلْآخِرُ</item>
        <item>ٱلْظَّاهِرُ</item>
        <item>ٱلْبَاطِن</item>
        <item>ٱلْوَالِي</item>
        <item>ٱلْمُتَعَالِي</item>
        <item>ٱلْبَرُّ</item>
        <item>ٱلْتَّوَّابُ</item>
        <item>ٱلْمُنْتَقِمُ</item>
        <item>ٱلْعَفُوُّ</item>
        <item>ٱلْرَّؤُفُ</item>
        <item>مَالِكُ ٱلْمُلْكُ </item>
        <item> ذُو ٱلْجَلَالِ وَٱلْإِكْرَامُ </item>
        <item>ٱلْمُقْسِطُ</item>
        <item>ٱلْجَامِعُ</item>
        <item>ٱلْغَنيُّ</item>
        <item>ٱلْمُغْنِيُّ</item>
        <item>ٱلْمَانِعُ   </item>
        <item>ٱلْضَّارُ  </item>
        <item>ٱلْنَّافِعُ  </item>
        <item>ٱلْنُّورُ   </item>
        <item>ٱلْهَادِي  </item>
        <item>ٱلْبَدِيعُ  </item>
        <item>ٱلْبَاقِي   </item>
        <item>لْوَارِثُ  </item>
        <item>ٱلْرَّشِيدُ  </item>
        <item>ٱلْصَّبُورُ  </item>



    </string-array>
    <string-array name="allahnamebanla_meaning">


        <item>অর্থঃ  পরম দয়ালু</item>
        <item>অর্থঃ অতিশয় মেহেরবান</item>
        <item>অর্থঃ সর্বকর্তৃত্বময়</item>
        <item>অর্থঃ অতি পবিত্র</item>
        <item>অর্থঃ শান্তি দানকারী</item>
        <item>অর্থঃ নিরাপত্তা ও ঈমান দানকারী</item>
        <item>অর্থঃ  পরিপূর্ণ রক্ষণাবেক্ষণকারী</item>
        <item>অর্থঃ পরাক্রমশালী</item>
        <item>অর্থঃ দুর্নিবার</item>
        <item>অর্থঃ  নিরঙ্কুশ শ্রেষ্ঠত্বের অধিকারী</item>
        <item>অর্থঃ সৃষ্টিকর্তা</item>
        <item>অর্থঃ সঠিকভাবে সৃষ্টিকারী</item>
        <item>অর্থঃ আকৃতি দানকারী</item>
        <item>অর্থঃ পরম ক্ষমাশীল</item>
        <item>অর্থঃ কঠোর</item>
        <item>অর্থঃ  সবকিছু দানকারী</item>
        <item>অর্থঃ রিযিকদাতা</item>
        <item>অর্থঃ বিজয়দানকারী</item>
        <item>অর্থঃ সর্বজ্ঞ</item>
        <item>অর্থঃ সংকীর্ণকারী</item>
        <item>অর্থঃ প্রশস্তকারী</item>
        <item>অর্থঃ অবনতকারী</item>
        <item>অর্থঃ উন্নতকারী</item>
        <item>অর্থঃ সম্মান দানকারী</item>
        <item>অর্থঃ (অবিশ্বাসীদের) বেইজ্জতকারী</item>
        <item>অর্থঃ সর্বশ্রোতা</item>
        <item>অর্থঃ সর্ববিষয় দর্শনকারী</item>
        <item>অর্থঃ অতল বিচারক</item>
        <item>অর্থঃ পরিপূর্ণ ন্যায়বিচারক</item>
        <item>অর্থঃ সকল গোপন বিষয়ে অবগত</item>
        <item>অর্থঃ সকল বিষয়ে জ্ঞাত</item>
        <item>অর্থঃ  অত্যন্ত ধর্য্যশীল</item>
        <item>অর্থঃ সর্বত্ত মর্যাদাশীল</item>
        <item>অর্থঃ  পরম ক্ষমাশীল</item>
        <item>অর্থঃ গুন্গ্রাহী</item>
        <item>অর্থঃ উচ্চ মর্যাদাশীল</item>
        <item>অর্থঃ সুমহান</item>
        <item>অর্থঃ  সংরক্ষণকারী</item>
        <item>অর্থঃ  সকলের জীবনোপকরণ দানকারী</item>
        <item>অর্থঃ  হিসাব গ্রহণকারী</item>
        <item>অর্থঃ   পরম মর্যাদার অধিকারী</item>
        <item>অর্থঃ  সুমহান দাতা</item>
        <item>অর্থঃ  তত্ত্বাবধায়ক</item>
        <item>অর্থঃ  কবুলকারী</item>
        <item>অর্থঃ  সর্বত্ত বিরাজমান</item>
        <item>অর্থঃ  পরম প্রজ্ঞাময়</item>
        <item>অর্থঃ   (বান্দাদের প্রতি) সদয়</item>
        <item>অর্থঃ  সকল মর্যাদার অধিকারী</item>
        <item>অর্থঃ  পুনরুজ্জীবিতকারী</item>
        <item>  সর্বজ্ঞ স্বাক্ষী</item>
        <item> পরম সত্য </item>
        <item> পরম নির্ভরযোগ্য কর্ম-সম্পাদনকারী  </item>
        <item> পরম শক্তির অধিকারী  </item>
        <item> সুদৃঢ়  </item>
        <item>  অভিভাবক ও সাহায্যকারী  </item>
        <item> সকল প্রশংসার অধিকারী  </item>
        <item>  সকল সৃষ্টির ব্যাপারে অবগত  </item>
        <item> প্রথমবার সৃষ্টিকর্তা  </item>
        <item> পুনরায় সৃষ্টিকর্তা  </item>
        <item> জীবন দানকারী  </item>
        <item> মৃত্যু দানকারী  </item>
        <item> চিরঞ্জীব  </item>
        <item> সমস্ত কিছুর ধারক ও সংরক্ষণকারী  </item>
        <item> অফুরন্ত ভান্ডারের অধিকারী  </item>
        <item> শ্রেষ্ঠত্বের অধিকারী</item>
        <item> এক ও অদ্বিতীয়  </item>
        <item> তিনি কারো ধার ধারেন না  </item>
        <item> অমুখাপেক্ষি  </item>
        <item> সর্বশক্তিমান  </item>
        <item> নিরঙ্কুশ সিদ্ধান্তের অধিকারী  </item>
        <item> অগ্রসারক  </item>
        <item> অবকাশ দানকারী  </item>
        <item> অনাদি  </item>
        <item>  অনন্ত, সর্বশেষ  </item>
        <item>  সম্পূর্ণরূপে প্রকাশিত  </item>
        <item> দৃষ্টি হতে অদৃশ্য  </item>
        <item> সমস্ত কিছুর অভিভাবক  </item>
        <item> সৃষ্টির গুণাবলীর উর্দ্ধে  </item>
        <item> পরম উপকারী  </item>
        <item> তাওবার তৌফিক দানকারী ও কবুলকারী  </item>
        <item> প্রতিশোধ গ্রহণকারী  </item>
        <item>  পরম উদার </item>
        <item> পরম স্নেহশীল  </item>
        <item> সমগ্র জগতের বাদশাহ  </item>
        <item> মহিমান্বিত ও দয়াবান সত্তা  </item>
        <item> হকদারের হোক আদায়কারী  </item>
        <item> একত্রকারী, সমবেতকারী  </item>
        <item> অমুখাপেক্ষি ধনী  </item>
        <item> পরম অভাবমোচনকারী  </item>
        <item> অকল্যাণরোধক  </item>
        <item> ক্ষতিসাধনকারী  </item>
        <item> কল্যাণকারী  </item>
        <item> পরম আলো  </item>
        <item>  পথ প্রদর্শক  </item>
        <item> অতুলনীয়  </item>
        <item> চিরস্থায়ী, অবিনশ্বর  </item>
        <item> উত্তরাধিকারী  </item>
        <item> সঠিক পথ প্রদর্শক  </item>
        <item> অত্যাধিক ধর্য্য ধারণকারী  </item>


    </string-array>
</resources>