<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ECB851"
    android:gravity="center"
    android:id="@+id/home_main_id"
    android:orientation="vertical"
    tools:context=".HomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/namajrulescardView_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="30dp"
            android:clickable="true"

            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_islamic_prayer"

                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="10dp"
                    android:background="#0C0D1B" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/namajrules"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/namajtimecardView_id"
            android:layout_width="0dp"
            app:cardCornerRadius="30dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="10dp"
                    android:src="@drawable/time_to_prayer_on_men"

                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="10dp"
                    android:background="#346CDB" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="18dp"
                    android:padding="5dp"
                    android:text="@string/namajtimes"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/ozuneyomcardView_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:clickable="true"
            app:cardCornerRadius="30dp"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="10dp"
                    android:src="@drawable/ozur_neyom"

                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="10dp"
                    android:background="#0C0D1B" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/ozurules"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/nameofallahcardView_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="30dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="10dp"
                    android:src="@drawable/name_of_allah"

                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="10dp"
                    android:background="#346CDB" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="18dp"
                    android:padding="5dp"
                    android:text="@string/nameofallah"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>



        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/othersardView_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="30dp"
            android:layout_weight="1"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_istanbul"

                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="10dp"
                    android:background="#0C0D1B" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/othersnamaj"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/fivekalimacardView_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="30dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="10dp"
                    android:src="@drawable/kalima_image"

                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="10dp"
                    android:background="#346CDB" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="20dp"
                    android:padding="5dp"
                    android:text="@string/kalimasomuho"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>




</LinearLayout>